ui-refactor changed site tab icon

--- a/src/main/cliapp/public/index.html
+++ b/src/main/cliapp/public/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>PrimeReact - Sigma</title>
+        <title>Alliance Curation Site</title>
 
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
-        <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
     </head>
 
     <body>
